# equivalib

./: .gitignore  .pylintrc  AGENT.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
.woodpecker/: main.yml
docs/: caching.md  extensions.md  plan1.md  presentation.md  report1.md  sat.md  spec1.md
scripts/: ci-check.sh  ci-venv.sh
src/equivalib/: __init__.py  all.py  arbitrary_collapse.py  bounded_int.py  comparable.py  constant.py  dynamic.py  extend_context.py  extend_sentence.py  fieldvalue.py  flatten_type_hierarchy.py  generate_context.py  generate_instances.py  generate_sentence.py  generate_sentences.py  generator_context.py  generator_type.py  generic_collapse.py  get_current_context.py  get_current_model.py  get_current_sentence.py  get_types_hierarchy.py  instance_mark_key.py  instantiate.py  label_type_list.py  labelled_type.py  link.py  mark_instance.py  mccarthy.py  mytype.py  orderedset.py  partially_order.py  random_collapse.py  read_type_information.py  sentence.py  sentence_model.py  split_type.py  structure.py  super.py  superfield.py  (+5 more)
src/equivalib/core/: __init__.py  api.py  bounds_inference.py  cache.py  concretize.py  domains.py  eval.py  expression.py  extension.py  extensions.py  generate.py  line_intervals_set.py  methods.py  name.py  normalize.py  order.py  parser.py  regex.py  sat.py  search.py  types.py  validate.py
tests/: test_arbitrary_collapse.py  test_core.py  test_core_extensions.py  test_dynamic.py  test_examples.py  test_extend_sentence.py  test_generate_context.py  test_generate_instances.py  test_generate_sentence.py  test_generate_sentences.py  test_generator_context.py  test_get_types_hierarchy.py  test_interesting.py  test_mccarthy.py  test_parser.py  test_partially_order.py  test_random_collapse.py  test_read_type_information.py  test_sentence.py
