[project]
name = "equivalib"
version = "0.1.0"
description = "A Python library for systematic generation of problem instances through equivalence partitioning for algorithmic testing."
authors = [
    {name = "Otto Jung", email = "otto.jung@vauplace.com"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    # Main dependencies required to use the library
    "ortools",
]

[project.optional-dependencies]
test = [
    # Dependencies required for running the test suite
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    # Dependencies required for development (linting, type checking, etc.)
    "pylint",
    "mypy>=0.800",
]

[project.urls]
homepage = "https://vau.place/equivalib"
repository = "https://git.vau.place/equivalib.git/about"
documentation = "https://vau.place/equivalib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src/equivalib", "tests"]
ignore_missing_imports = true
strict_optional = true
allow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
