[project]
name = "equivalib"
version = "0.1.0"
description = "A Python library for systematic generation of problem instances through equivalence partitioning for algorithmic testing."
authors = [
    {name = "Otto Jung", email = "otto.jung@vauplace.com"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    # Main dependencies required to use the library
    "ortools",
]

[project.optional-dependencies]
test = [
    # Dependencies required for running the test suite
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    # Dependencies required for development (linting, type checking, etc.)
    "ruff>=0.11",
    "mypy>=0.800",
]

[project.urls]
homepage = "https://vau.place/equivalib"
repository = "https://git.vau.place/equivalib.git/about"
documentation = "https://vau.place/equivalib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src/equivalib", "tests"]
ignore_missing_imports = true
strict_optional = true
allow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "PLC", "PLR", "PLW"]
ignore = [
    "E501",     # line-too-long (handled by formatter)
    "E711",     # comparison to None (singleton-comparison)
    "E712",     # comparison to True/False
    "E721",     # type-comparison (comparison-with-callable equivalent)
    "E731",     # lambda-assignment (unnecessary-lambda-assignment)
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "PLC2801",  # unnecessary-dunder-call
    "PLW1641",  # eq-without-hash
]

[tool.ruff.lint.per-file-ignores]
"src/equivalib/__init__.py" = ["F401", "F403"]
"src/equivalib/all.py" = ["F401", "F403"]
